--- a/elementos.html
+++ b/elementos.html
@@ -21,5 +21,12 @@
         <div class="item">9</div>
         <div class="item">10</div>
     </div>
+
+    <!-- Itens -->
+    <div class="container">
+        <div class="box" id="item-1">1</div>
+        <div class="box" id="item-2">2</div>
+        <div class="box" id="item-3">3</div>
+    </div>
 </body>
 </html>
