--- a/flexboxpratica.html
+++ b/flexboxpratica.html
@@ -4,9 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=,, initial-scale=1.0">
-    <title>Flexbox na prática</title>
+    <title>Hotel Paraíso</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/flexboxpratica.css">
 </head>
 <body>
-    
+    <header>
+        <a href="#"><img src="img/logo.png" alt="Hotel Paraíso"></a>
+        <nav>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Reservas</a></li>
+            <li><a href="#">Contato</a></li>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1>Conheça este paraíso chamado Itacaré</h1>
+        <h3>"Acochego, conforto, simpatia e alto astral"</h3>
+        <a class="btn" href="#">Saiba mais</a>
+    </section>
+
+    <section class="conheca-o-hotel">
+        <h3>Conheça o Hotel Paraíso!</h3>
+        <p>Feche os olhos e imagine o paraíso. Um lugar no meio da Mata Atlântica e banho pelo mar, onde você encontra paz, tranquilidade, conforto e comodidade.</p>
+        <hr>
+        <ul class="grid">
+            <li class="small" style="background-image: url(img/itacare-01.jpg);"></li>
+            <li class="large" style="background-image: url(img/itacare-02.jpg);"></li>
+            <li class="large" style="background-image: url(img/itacare-03.jpg);"></li>
+            <li class="small" style="background-image: url(img/itacace-04.jpg);"></li>
+    </section>
+
+    <section class="caracteristicas">
+        <h3>Único hotel pé na areia de Itacaré</h3>
+        <p>Implatado em uma área completamente arborizada, o Hotel Paraíso é o único hotel pé de Itacaré. Aqui o Mar será o seu companhiero e vocÊ terá as belezas da natureza como guia.</p>
+        <hr>
+        <ul class="grid">
+            <li><i class="fa fa-location-arrow"></i>
+                <h4>Localização</h4>
+                <p>Localizada no sul da Banhia, entre o mar e a Mata Atlântica, Itacré tem refrescantes praia belíssimas, muitas delas tão pequenas que nem aparecem nos mapas.</p>
+            </li>
+            <li><i class="fa fa-gift"></i>
+                <h4>Pacote e Ofertas</h4>
+                <p>Sabe aquele descontaído encontro com a família e amigos? Ou um momento relax? Nossa estrutura conta com uma diversidade de espaços que proporcionam momentos inesquecíveis.</p>
+            </li>
+            <li><i class="fa fa-home"></i>
+                <h4>Acomodações</h4>
+                <p>Hotel Paraíso possui 29 unidades, divididas entre 11 chalés, 16 amplas suítes e 2 chales todas com TV a cabo, frigobar, além de varanda com rede.</p>
+            </li>
+        </ul>
+    </section>
+
+    <section class="newsletter">
+        <h3>Newsletter</h3>
+        <p>Assine nossa newsletter para se manter atualziado com nossos serviços e a programação de nossa culturais.</p>
+        <hr>
+
+        <form>
+            <input type="text" placeholder="Email">
+            <button>Cadastrar</button>
+        </form>
+    </section>
+
+    <footer>
+        <ul>
+            <li><a href="#"><i class="fab fa-instagram"></i></li></a>
+            <li><a href="#"><i class="fab fa-facebook"></i></li></a>
+            <li><a href="#"><i class="fab fa-pinterest"></i></li></a>
+        </ul>
+        <p>Todos os direitos resservados - Hotel Paraíso 2023</p>
+    </footer>
+
 </body>
 </html>
